--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <body>
 	<div class="container">
 		<div id="buttons">
-			<button id="papier">Papier</button>
-            <button id="kamien">Kamień</button>
-        	<button id="nozyce">Nożyce</button>
+			<button id="play-rock">Kamień</button>
+			<button id="play-paper">Papier</button>
+			<button id="play-scissors">Nożyce</button>
 		</div>
 		<div id="messages"></div>
-	</div>
+	  </div>
 	<script src="js/functions.js"></script>
 	<script src="js/script.js"></script>
 </body>
